<resources>
    <string name="app_name">ShoppingGO!</string>
    <string name="title_activity_main">Map</string>
    <string name="title_activity_brands">Marcas</string>
    <string name="title_activity_promos">Promociones</string>
    <string name="title_activity_coupons">Cupones</string>

    <!-- Facebook -->
    <string name="facebook_app_id">678060775913586</string>
    <string name="fb_login_protocol_scheme">fb678060775913586</string>


    <string name="label_coupons">CUPONES</string>
    <string name="hint_user_phone_input">+000 Escribe tu N° de Teléfono</string>
    <string name="label_provide_communication_way_required">Si obtienes una súper promoción necesitaremos comunicarnos contigo</string>
    <string name="title_provide_communication_way_required">¿Cómo nos podemos contactar?</string>
    <string name="label_continue">CONTINUAR</string>
    <string name="label_contact_us_via_whatsapp">Si no recibes el SMS de confirmación puedes comunicarte con nosotros por WhatsApp al número +503 7768 1443</string>
    <string name="hint_code">Código</string>
    <string name="title_confirm_your_phone">Confirma tu Celular</string>
    <string name="label_confirm_your_phone">Hemos enviado un SMS al número %1$s, ingresa el código de confirmación</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_select_brand_category">Selecciona la Categoría de la Marca</string>
    <string name="label_select_country">Selecciona tu País Actual</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_google">Google</string>
    <string name="label_please_wait">Por favor espere…</string>
    <string name="error_title_something_went_wrong">¡Ups!</string>
    <string name="error_content_facebook_graph">Error al iniciar sesión en Facebook. Inténtelo nuevamente.</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_verify">Verificar</string>
    <string name="button_activate">Activar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_retry">Reintentar</string>
    <string name="button_yes">Si</string>
    <string name="button_no">No</string>
    <string name="error_label_something_went_wrong">Revisa tu conexión e inténtalo de nuevo</string>
    <string name="title_dialog_invalid_nickname">Nickname Inválido</string>
    <string name="label_dialog_invalid_nickname">Este nickname no es válido. Intenta uno diferente</string>
    <string name="title_dialog_invalid_name">Nombre Inválido</string>
    <string name="label_dialog_invalid_name">Este nombre no es válido. Intenta uno diferente</string>
    <string name="title_dialog_nickname_already_exists">Nombre en uso</string>

    <string name="dialog_title_activate_location">ACTIVAR UBICACIÓN</string>
    <string name="dialog_content_activate_location">Debes activar la ubicación para un uso correcto del mapa.</string>
    <string name="dialog_permissions_title">Permisos</string>
    <string name="dialog_permissions_location_content">Debes proporcionar permisos a la aplicación para acceder a tu ubicación y usar la funcionalidad del mapa.</string>
    <string name="toast_mock_apps_may_be_installed">¡Asegúrate de no tener instaladas aplicaciones de ubicaciones falsas!</string>
    <string name="title_wildcard_pointer">¡Suerte!</string>
    <string name="label_wildcard_pointer">Averigua el secreto</string>
    <string name="title_phone_already_exists">Teléfono ya registrado</string>
    <string name="label_phone_already_exists">El número de teléfono que ingresaste ya está en uso</string>
    <string name="error_content_something_went_wrong_try_again">¡Revisa tu conexión!</string>
    <string name="title_update_required">¡Actualiza tu aplicación!</string>
    <string name="content_update_required">¡Debes actualizar tu aplicación a la versión %1$s para continuar!</string>
    <string name="title_await_please">Espera un momento</string>
    <string name="error_title_incorrect_token">Código</string>
    <string name="error_label_incorrect_token">Código incorrecto, inténtalo nuevamente.</string>
    <string name="label_portable_phone_number_part1">Si tu número es portado, no recibirás el SMS de confirmación. Por favor, comunícate con nosotros por WhatsApp al número </string>
    <string name="label_portable_phone_number_part2"> para obtener tu código.</string>
    <string name="label_callcenter_phone_number">7768-1443</string>
    <string name="label_type_token_part1">Hemos enviado un SMS al número</string>
    <string name="label_type_token_part2">, ingresa el código de confirmación</string>
    <string name="m4nh_0310018_315_jswikt_th4n_lck">sDhQ4W0tbAycdZMFcwYR2dVTNNNYgX38e61aDP1dE1tHpD0Cs7F1C85DZYVLisPytso30pc40JVHVKHP8+Q5PLo1BQ5KEgS5rAgtTRS9yHklcJL/XQqqgPFKtHHdrwKzJNTv2xAnvDDaVQv+NIJ4g6BDM6vJH6zOG/hukmW+y0FTYWx0ZWRfXywK/kdaLX2JDcQrkdWGD3byR204FA8Lwn0ubcMp2137jADN+MZ6wqjryxkgIc9j+fHd4KeJK1lG9TftwUcBa7FkrZ+oV+3hmhgls8KJwcc1C1pk0P0nrOIFrRxdf+NyDFwDjvvV3mqChHW7HrfRBk/SWQuKYLHcBr/sHrEYJ+wyWJz5gEvcszhrAdNjfaG4A1093WhPTllp+est2+iCV7JqQYT3Kzjj3wBZQ+ax9Yhohnhy0ufK09c/fPV05bui7pZ9CQ7w5h6fPIwv+44zHyFrMfN6mz4xPDWY+G0lDXW/KH+MNuyii+fkbTYMSN4/3/BVd+wbcDi4PmtNSa7VNJ++oKamVf6u0Qnoj5WBY8IQVt9sH1AXzHg+mSTW09qC/n2wYmxOEub8+5wAiD7JnfH2MzBogQEVOgAOx5F3wbtcylKbqUmYr6mN2tU2wmutKauu+1wkWtEQ3JcUzMO2oI01KJumB7rLT1hiSh/VkzE8mMg5s+El9DM=</string>
    <string name="cant_redeem_title">¡No tan Rápido!</string>
    <string name="redeem_prize_interval">¡Solo te faltan %1$s hora(s) para canjear tu premio! ¡No te canses de jugar, buena suerte!</string>


    <!--    NICKNAME    -->
    <string name="title_nickname">NICKNAME (APODO)</string>
    <string name="label_content_nickname">Elige un nombre de usuario (apodo) para identificarte. Este nombre se mostrará en las tablas de Rankings y otros contenidos de uso público. Ejemplos:</string>
    <string name="hint_nickname">Nickname</string>
    <string name="validation_nickname_already_exists">Este nombre ya está en uso, usa uno diferente.</string>
    <string-array name="array_nickname_examples">
        <item>Pepe43</item>
        <item>jose.luis</item>
        <item>majo12</item>
    </string-array>

    <!--    COMPONENTS -->
    <string name="component_compass">Giroscopio</string>
    <string name="component_gps">GPS</string>
    <string name="component_camera">Cámara</string>
    <string name="component_opengl">OpenGL 2.0</string>
    <string name="contentdescription_2d_prize_image">Imagen de premio 2D</string>
    <string name="toast_permissions_denied">Denegaste los permisos. Inténtalo de nuevo.</string>
    <string name="title_grant_permissions">Concede Permisos</string>
    <string name="label_grant_permissions">Deberás conceder permisos a la aplicación para hacer uso de todas las características. Haz clic el siguiente botón.</string>

    <!--    VALIDATIONS -->
    <string name="validation_not_valid_phone_message">Teléfono no válido</string>
    <string name="validation_required_phone_message">El número de teléfono es requerido</string>
    <string name="validation_required_operator">Debe seleccionar un operador</string>
    <string name="validation_required_amount">Debe seleccionar un monto</string>
    <string name="validation_not_valid_vendor_code">El código de vendedor no es válido</string>
    <string name="validation_required_vendor_code">El código de vendedor es requerido</string>
    <string name="validation_title_required">Requerido</string>
    <string name="validation_required_nickname">El nickname es requerido.</string>
    <string name="validation_title_invalid_nickname">Nick</string>
    <string name="validation_not_valid_nickname">Este nickname no es válido. Intenta con otro</string>
    <string name="label_loading_exchanging_chest">¡Abriendo objeto, espera!</string>

    <string name="title_not_enough_coins">Sin Monedas...</string>
    <string name="label_not_enough_coins">No tienes suficientes monedas para canjear un premio. ¡Abre más cofres y conseguirás monedas!</string>
    <string name="label_redeeming_prize_wait">¡Canjeando premio, espera!</string>
    <string name="toast_keep_pressed_three_seconds">Mantén presionado por 3 segundos</string>
    <string name="toast_gold_out_of_search_range">ORO: Saliste del rango de búsqueda</string>
    <string name="toast_silver_out_of_search_range">PLATA: Saliste del rango de búsqueda</string>
    <string name="toast_bronze_out_of_search_range">BRONCE: Saliste del rango de búsqueda</string>
    <string name="label_promos_of_day">Promociones del %1$s</string>
    <string name="label_promo_valid_date">Válido únicamente el %1$s</string>
    <string name="label_exchange_method_wildcard">Búscalo en Comodines</string>
    <string name="label_exchange_method_chest">Búscalo en Regalos</string>
    <string name="label_exchange_20_coins">Canjea 20 Monedas</string>
    <string name="label_exchange_method_scan">Escanear las Imágenes</string>
    <string name="label_exchange_method_trasure_hunt">Búsqueda del Tesoro</string>
    <string name="label_exchange_method_shopping">Cómpralo por</string>
    <string name="title_warning">¡Advertencia!</string>
    <string name="label_purchase_coupon_confirmation">¿Deseas comprar un Cupón por 500 monedas?</string>
    <string name="toast_favorite_failed">No se guardó el cambio, inténtalo de nuevo.</string>
    <string name="title_congratulations">¡Felicidades!</string>
    <string name="label_gift_open_result">Al abrir el regalo obtuviste %1$d monedas</string>


</resources>
