<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SmsCodeInput">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/bg_full_purple_blue" />

        <!-- Layer 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:orientation="vertical"
                android:weightSum="100">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="14" />

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:src="@drawable/ic_logo_main" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="19" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bg_edittext_white_gradient" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20" />


                <ImageView
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:scaleType="fitCenter"
                    android:src="@drawable/btn_medium_purple" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="12" />


            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

        </LinearLayout>

        <!-- Layer 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:orientation="vertical"
                android:weightSum="100">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="29" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="19"
                    android:orientation="vertical"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/lblTitle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="28"
                        android:fontFamily="@font/baloo_regular"
                        android:gravity="center"
                        android:text="@string/title_confirm_your_phone"
                        android:textColor="@color/color_white" />

                    <TextView
                        android:id="@+id/lblPhoneVlidated"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="56"
                        android:fontFamily="@font/lato_semibold"
                        android:gravity="center"
                        android:maxLines="3"
                        android:text="@string/label_confirm_your_phone"
                        android:textColor="@color/color_white"
                        android:textSize="14sp" />


                </LinearLayout>

                <EditText
                    android:id="@+id/etCodeInput"
                    style="@style/NoUnderlineEditText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:ems="10"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato_semibold"
                    android:gravity="center"
                    android:hint="@string/hint_code"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="5"
                    android:textColor="@color/color_purple"
                    android:textColorHint="@color/color_blue_light"
                    tools:text="00987" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/lblContactUs"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:fontFamily="@font/lato_semibold"
                    android:gravity="center"
                    android:maxLines="4"
                    android:text="@string/label_contact_us_via_whatsapp"
                    android:textColor="@color/color_white"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/lblButtonContent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:fontFamily="@font/baloo_regular"
                    android:gravity="center"
                    android:text="@string/label_continue"
                    android:textAllCaps="true"
                    android:textColor="@color/color_white"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="12" />


            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>